// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Link Auto Tooltip 1`] = `
<div>
  <span
    class=""
    title="a link"
  >
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
      href="/"
    >
      a link
    </a>
  </span>
</div>
`;

exports[`Storyshots Link Basic 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
    href="/"
  >
    a link
  </a>
</div>
`;

exports[`Storyshots Link Explicit Tooltip 1`] = `
<div>
  <span
    class=""
    title="A tooltip"
  >
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
      href="/"
    >
      a link
    </a>
  </span>
</div>
`;

exports[`Storyshots Link Params 1`] = `
<div>
  <a
    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
    href="/"
  >
    a link
  </a>
</div>
`;
